# python-sample

./: .editorconfig  .gitignore  .mypy.ini  .tbls.yml  Makefile  cloudbuild.yaml  docker-compose.yml  gunicorn.conf.prod.py  openapi.json  pyproject.toml  readme.md  sample.env
app/: configs.py  db.py  jwttoken_middleware.py  main.py  middlewares.py  user_identity_middleware.py
app/choices/: base.py  chat_room_type.py  chat_type.py  cloud_logging_severity.py  company_document_type.py  company_plan_status.py  company_plan_status_no_trial.py  contact_type.py  content_category_type.py  content_division.py  content_package_level.py  content_type.py  current_job.py  educational_material_type.py  employment_management_status_item.py  employment_status.py  evaluation_function_type.py  event_purpose.py  faq_category.py  faq_target.py  file_type.py  general_question_skill_level.py  hachathon_type.py  http_method_type.py  information_target.py  job_changing_status.py  job_draft_status.py  job_feature_category.py  job_hunting_status.py  job_hunting_type.py  job_selection_type.py  judge_status.py  kpi_log_type.py  major_course.py  message_content_choice.py  notification_type.py  organization_type.py  passive_smoking_initiative.py  phone_number_type.py  portfolio_user_skill_level.py  (+30 more)
app/commands/: __init__.py  create_service_account_key_json.py  openapi.py
app/constants/: common.py  email.py  file_dir.py  regex.py
app/exceptions/: __init__.py  exception_handlers.py  exceptions.py  funcs.py  schemas.py
app/models/: __init__.py  area.py  commuting_time.py  company.py  disclosed_student.py  employment_management_status.py  favorite_job.py  feature.py  framework.py  job.py  job_template.py  managed_student.py  message.py  message_tempfile.py  occupational_ability_status.py  programming_language.py  reaction.py  recruitment_flow.py  recruitment_status.py  selection.py  skill.py  template.py
deploy/: buildscript.sh  delete_gae_older_versions.sh  output_service_account_key.sh
docs/: openapi.json  コーディング規約.md  テストの書き方.md  テスト方針.md  新しいAPIエンドポイントの作成方法.md  新しいFastAPIスキーマの作成方法.md  新しいマイグレーションの作成方法.md
migrations/: env.py
(+224 files in other folders)
