[tool.poetry]
name = "scout-api"
version = "0.1.0"
description = ""
authors = ["444 <triple-four@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
gunicorn = "^20.1.0"
pyhumps = "^3.7.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
email-validator = "^1.3.1"
Jinja2 = "^3.1.2"
fastapi-mail = "^1.2.5"
requests = "^2.28.2"
httpx = "^0.23.3"
asgi-lifespan = "^2.0.0"
google-cloud-storage = "^2.7.0"
sqlalchemy = {extras = ["asyncio"], version = "2.0.2"}
alembic = "^1.9.2"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
cryptography = "^40.0.2"
psutil = "^5.9.5"
google-cloud-profiler = "^4.0.0"
pandas = "^2.0.3"
google-cloud-logging = "^3.6.0"
types-python-dateutil = "^2.8.19.14"
redis = "^5.0.1"
pyjwt = "^2.8.0"
chardet = "^5.2.0"
google-cloud-pubsub = "^2.18.4"
autoflake = "^2.2.1"
psycopg2 = "^2.9.9"
autopep8 = "^2.0.4"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"
pytest = "^7.2.1"
mypy = "^0.991"
factory-boy = "^3.2.1"
pytest-asyncio = "^0.20.3"
freezegun = "^1.2.2"
pytest-mock = "^3.10.0"
pyproject-flake8 = "^6.0.0.post1"
pep8-naming = "^0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 240
target-version = ['py310']
include = '\.py$'

exclude = '''
(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | venv
    | \.venv
    | \.idea
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
    | migrations
)
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = "*/migrations/*.py"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.flake8]
max-line-length = 240
exclude = "__init__.py"
per-file-ignores=["./app/tests?*.py:N802"]
